--- a/.devcontainer/basic/project/weatherapp.html
+++ b/.devcontainer/basic/project/weatherapp.html
@@ -13,6 +13,9 @@
            <input type="text" placeholder="enter a city name" spellcheck="false">
            <button> <img src="weather-app-img/images/search.png"></button>
         </div>
+        <div class="error">
+            <p>invalid city name</p>
+        </div>
     <div class="weather">
         <img class="weather-icon" src="weather-app-img/images/rain.png">
         <h1 class="temp">22 °C</h1>
